# paper_translation_in_notion

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: cfg.py  load_model.py  main.py  main_for_cloud.py  notion.py  temp.py  translate.py
cloud_functions/: main.py  requirements.txt
