[tool.poetry]
name = "paper-translation-in-notion"
version = "0.1.0"
description = ""
authors = ["vodoomi <abe.mikito@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.22.0"
python-dotenv = "^1.0.1"
numpy = "1.26.4"
onnxruntime = "1.17.0"
doclayout-yolo = "0.0.3"
pix2text = "1.1.2.3"
google-generativeai = "^0.8.4"
notion-client = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
